<resources>
    <string name="app_name" translatable="false">m1</string>
    <string name="welcome">Welcome to m1!</string>
    <string name="login_btn">Click to login</string>
    <string name="desc_app_logo" translatable="false">app-logo</string>
    <string name="passwords">Passwords</string>
    <string name="placeholder" translatable="false">...</string>
    <string name="recipes">Recipes</string>
    <string name="scroll_desc">scrollable container</string>
    <string name="tab_passwords_template_header">Example-Header</string>
    <string name="tab_passwords_template_websites">site1.com\nsite2.com\nsite3.com</string>
    <string name="tab_passwords_action_copy">Copy</string>
    <string name="tab_passwords_action_show">Show</string>
    <string name="tab_passwords_action_reset">Reset</string>
    <string name="example_input">Example-Input</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Continue</string>
    <string name="delete">Delete</string>
    <string name="tab_passwords_template_password" translatable="false">A1B2C3</string>
    <string name="tab_recipes_template_header" translatable="false">Pizza Diablo</string>
    <string name="ingredients" >Ingredients</string>
    <string name="ingredients_example">- Pizza\n- Salami\n- Cheese\n- Chilli</string>
    <string name="ingredients_card_image_desc">Food picture</string>
    <string name="steps">Steps</string>
    <string name="steps_example">1. Salami on Pizza\n2. Cheese on Pizza\n3. Chilli on Pizza\n4. Pizza burn</string>
    <string name="card_recipe_control_delete_desc">delete this recipe</string>
    <string name="card_recipe_control_share_desc">share this recipe</string>
</resources>