<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="?attr/colorPrimary2">

        <TextView
            android:id="@+id/tab_passwords_card_template_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tab_passwords_template_header"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tab_passwords_card_template_sites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="10dp"
            android:singleLine="false"
            android:text="@string/tab_passwords_template_websites"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_passwords_card_template_header" />

        <Button
            android:id="@+id/tab_passwords_card_template_copy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue_400"
            android:text="@string/tab_passwords_action_copy"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tab_passwords_card_template_show_btn"
            app:layout_constraintTop_toBottomOf="@+id/tab_passwords_card_template_reset_btn" />

        <Button
            android:id="@+id/tab_passwords_card_template_show_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue_500"
            android:text="@string/tab_passwords_action_show"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_passwords_card_template_delete_btn" />

        <Button
            android:id="@+id/tab_passwords_card_template_reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue_600"
            android:text="@string/tab_passwords_action_reset"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tab_passwords_card_template_show_btn"
            app:layout_constraintEnd_toStartOf="@+id/tab_passwords_card_template_delete_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tab_passwords_card_template_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue_600"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tab_passwords_card_template_show_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>