<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_tabLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab_passwords"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_tabLayout">

        <ScrollView
            android:id="@+id/tab_passwords_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="123dp"
            android:contentDescription="@string/scroll_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/tab_passwords_scroll_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/header_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/desc_app_logo"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toStartOf="@+id/header_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header_text" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|start"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home_tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_header"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab_passwords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwords" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab_..."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_container_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:background="?attr/colorSecondary2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:backgroundTint="?attr/colorSecondary"
            android:padding="10dp"
            android:alpha="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="input field"
                android:ems="12"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/example_input"
                android:textColor="?attr/colorPrimary2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/input_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/red_500"
                android:onClick="inputCancel"
                android:text="@string/cancel"
                android:textColor="@color/white_full"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_field" />

            <Button
                android:id="@+id/input_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/green_500"
                android:onClick="inputAccept"
                android:text="@string/accept"
                android:textColor="@color/white_full"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>